# transcripter

./: .gitignore  README.md  SConstruct  log.txt  setup_chatgpt.rb  tsconfig.json
cppsrc/: Dockerfile  SConstruct  Transcribe.hpp  docker-compose.yml  main.cpp
cppsrc/API/: Jira.hpp  OpenAI.hpp
cppsrc/Engine/: Engine.hpp  IEngine.hpp
cppsrc/Service/: Mail.hpp  Transcribe.hpp
cppsrc/Test/: CMakeLists.txt
cppsrc/Test/Engine/: Engine.hpp  IEngine.hpp
cppsrc/Test/Service/: Mail.hpp
cppsrc/Test/Workers/: Client.hpp  MessageBus.hpp  PocoHandler.hpp
cppsrc/Test/Workers/Policies/google/: ScheduleGoogleMeeting.hpp
cppsrc/Test/Workers/Policies/jira/: CreateJiraTicket.hpp
cppsrc/interface/: jira.hpp  openai.hpp
cppsrc/workers/: Base.hpp  Client.hpp  MessageBus.hpp  PocoHandler.cpp  PocoHandler.hpp  README.md  blah.cpp
cppsrc/workers/jira/: CreateTicket.hpp
cppsrc/workers/misc/: Test.hpp
cppsrc/workers/policies/: SendEmail.hpp  Test.hpp  TranscribeVideo.hpp
cppsrc/workers/policies/google/: ScheduleGoogleMeeting.hpp
cppsrc/workers/policies/jira/: CreateJiraTicket.hpp  CreateTicket.hpp
dev/: chatgpt.rb
devtools/: README.md  chatgpt.rb
reference/: openai.md
scripts/: print_directory_structure.sh
